--- a/lostFound/src/css/webDesign.css
+++ b/lostFound/src/css/webDesign.css
@@ -117,6 +117,49 @@ h2 {
     color: white;
 }
 
+/* CRUD Links */
+.crud-links {
+    margin-bottom: 20px;
+}
+
+.crud-links a {
+    margin-right: 10px;
+    color: #004d00;
+    text-decoration: none;
+}
+
+.crud-links a:hover {
+    text-decoration: underline;
+}
+
+/* Create Link */
+.create-link {
+    margin-bottom: 20px;
+}
+
+.create-link a {
+    color: #004d00;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.create-link a:hover {
+    text-decoration: underline;
+}
+
+/* Update Icon */
+.update-icon {
+    display: inline-block;
+    margin-top: 10px;
+    color: #004d00;
+    text-decoration: none;
+    font-size: 1.2em;
+}
+
+.update-icon:hover {
+    color: #008000;
+}
+
 /* New Styles */
 /* General Styles */
 body {
@@ -235,4 +278,41 @@ h2 {
 .pagination span.active {
     background-color: #004d00;
     color: white;
+}
+
+/* Modal Styles */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 60px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
